~~~~~~~~~
Changelog
~~~~~~~~~

Version 0.28.0dev
--------------

Backwards incompatible changes:

- Wrapped exceptions now cause ``dispatching.dispatch()`` to raise ``SystemExit``
  instead of returning without error.

Enhancements:

- Added support for Python 3.6, 3.7 and 3.8
- When using `skip_unknown_args=True`, not only does this now work as intended
  (see bugfixes below) but in addition it stashes the unknown args in ``namespace._unknown_args``,
  where they can be accessed by functions annotated with ``@expects_obj``.

Fixed bugs:

- ``str`` annotations on ``*args`` would not result in the string being set as the help message,
  as intended and as was already the case for normal args (PR #3).
- The `skip_unknown_args` option was broken and would always error

Version 0.27.1
-----------

Forked from argh, renamed to yaargh

Version 0.26.3-dev
------------------

Backward incompatible changes:

- Dropped support for Python 2.6.

Enhancements:

- Added support for Python 3.5.
- Support introspection of function signature behind the `@wraps` decorator
  (issue #111).

Fixed bugs:

- When command function signature contained ``**kwargs`` *and* positionals
  without defaults and with underscores in their names, a weird behaviour could
  be observed (issue #104).

Other changes:

- Include the license files in manifest (PR #112).

Version 0.26.2
--------------

- Removed official support for Python 3.4, added for 3.5.
- Various tox-related improvements for development.
- Improved documentation.

Version 0.26.1
--------------

Fixed bugs:

- The undocumented (and untested) argument `dispatch(..., pre_call=x)`
  was broken; fixing because at least one important app depends on it
  (issue #63).

Version 0.26
------------

This release is intended to be the last one before 1.0.  Therefore a major
cleanup was done.  This **breaks backward compatibility**.  If your code is
really outdated, please read this list carefully and grep your code.
