@@ -288,7 +288,11 @@ def _execute_command(function, namespace_obj, errors_file, pre_call=None):
 
         errors_file.write(compat.text_type(processor(e)))
         errors_file.write('\n')
-        sys.exit()
+
+        # Use code from CommandError if available, otherwise default to 1
+        code = e.code if isinstance(e, CommandError) and e.code is not None else 1
+
+        sys.exit(code)
 
 
 def dispatch_command(function, *args, **kwargs):
